--- a/README.org
+++ b/README.org
@@ -124,10 +124,12 @@
     * [[file:./coding/338_比特位计数.py][338.比特位计数]]
 **** BFS
     * [[file:./coding/301_删除无效的括号.py][301.删除无效的括号]]
+**** 拓扑排序
+    * [[file:./coding/207_课程表.py][207.课程表]]
 **** DFS
     * [[file:/coding/200_岛屿数量.py][200.岛屿数量]]😊
-    * [[file:./coding/207_课程表.py][207.课程表]]
     * [[file:/coding/695_岛屿的最大面积.py][695.岛屿的最大面积😁]]
+    * [[file:./coding/576_出界的路径数.py][576.出界的路径数😭]]
 **** 堆
     + [[file:./coding/215_数组中的第K个最大元素.py][215.数组中的第K个最大元素]]😊
 **** 双向队列
