--- a/README.org
+++ b/README.org
@@ -131,6 +131,7 @@
     * [[file:/coding/200_岛屿数量.py][200.岛屿数量]]😊
     * [[file:/coding/695_岛屿的最大面积.py][695.岛屿的最大面积😁]]
     * [[file:./coding/576_出界的路径数.org][576.出界的路径数]]
+    * [[file:./coding/130_被围绕的区域.org][130.被围绕的区域😭]]
 **** 堆
     + [[file:./coding/215_数组中的第K个最大元素.py][215.数组中的第K个最大元素]]😊
 **** 双向队列
