--- a/README.org
+++ b/README.org
@@ -1,3 +1,4 @@
+
 * 🔧Emacs工具篇
 ** 常用快捷键(ctrl-c; alt-m)
    | 功能                      | 快捷键                               |
@@ -138,6 +139,8 @@
     * [[file:/coding/239_滑动窗口最大值.py][239.滑动窗口最大值]]😭
 **** 二分查找
     * [[file:/coding/4_寻找两个正序数组的中位数.py][4.寻找两个正序数组的中位数]]
+**** 递归
+    * [[file:./coding/638_大礼包.py][638.大礼包]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题                      | deadline      |
