--- a/README.org
+++ b/README.org
@@ -104,7 +104,7 @@
      + [[file:./coding/11_成最多水的容器.py][11.盛最多水的容器]]
      + [[file:./coding/15_三数之和.py][15.三数之和😂]]
      + [[file:/coding/16_最接近的三数之和.py][16.最接近的三数之和]]😁
-     + [[file:./234_回文链表.py][234.回文链表]]😼
+     + [[file:./coding/234_回文链表.py][234.回文链表]]😼
      + [[file:./coding/344_反转字符串.py][344.反转字符串😊]]
      + [[file:/coding/345_反转字符串中的元音字母.py][345.反转字符串中的元音字母]]
      + [[file:./coding/160_相交链表.org][160.相交链表]]
@@ -132,7 +132,7 @@
     * [[file:./coding/207_课程表.py][207.课程表]]
 **** DFS
     * [[file:/coding/200_岛屿数量.py][200.岛屿数量]]😊
-    * [[file:./417_太平洋大西洋水流问题.py][417.太平洋大西洋水流问题]]👖
+    * [[file:./coding/417_太平洋大西洋水流问题.py][417.太平洋大西洋水流问题]]👖
     * [[file:/coding/695_岛屿的最大面积.py][695.岛屿的最大面积😁]]
     * [[file:./coding/576_出界的路径数.org][576.出界的路径数]]
     * [[file:./coding/130_被围绕的区域.org][130.被围绕的区域😭]]
