--- a/README.org
+++ b/README.org
@@ -131,6 +131,7 @@
     * [[file:./coding/61_旋转链表.py][61.旋转链表]]😁
     * [[file:/coding/142_环形链表II.py][142.环形链表II]]😊
     * [[file:/coding/148_排序链表.py][148.排序链表]]
+    * [[file:/coding/206_反转链表.org][206.反转链表]]
 **** 位运算
     * [[file:./coding/338_比特位计数.py][338.比特位计数]]
 **** BFS
@@ -152,6 +153,9 @@
     * [[file:/coding/4_寻找两个正序数组的中位数.py][4.寻找两个正序数组的中位数]]
 **** 递归
     * [[file:./coding/638_大礼包.py][638.大礼包]]
+    * [[file:/coding/1140_石子游戏II.org][1140.石子游戏 II]]😭
+**** 哈希表
+    * [[file:/coding/982_按位与为零的三元组.org][982.按位与为零的三元组]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题                      | deadline      |
