--- a/README.org
+++ b/README.org
@@ -87,6 +87,8 @@
      * [[file:./coding/337_打家劫舍III.py][🍊337.打家劫舍III]]
      * [[file:./coding/416_分割等和子集.py][416.分割等和子集]]🤓
      * [[file:./coding/494_目标和.py][494.目标和😭]]
+     * [[file:./coding/903_DI序列的有效排列.org][903.DI序列的有效排列🥱]]
+     * [[file:./coding/877_石子游戏.org][877.石子游戏]]
 **** 二叉树
     * [[file:./coding/94_二叉树的中序遍历.py][94.二叉树的中序遍历]]
     * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
