--- a/README.org
+++ b/README.org
@@ -88,7 +88,9 @@
      * [[file:./coding/416_分割等和子集.py][416.分割等和子集]]🤓
      * [[file:./coding/494_目标和.py][494.目标和😭]]
      * [[file:./coding/903_DI序列的有效排列.org][903.DI序列的有效排列🥱]]
+     * [[file:./coding/808_分汤.py][808.分汤]]😭
      * [[file:./coding/877_石子游戏.org][877.石子游戏]]
+     * [[file:./coding/1406_石子游戏3.py][1406.石子游戏3]]😭
 **** 二叉树
     * [[file:./coding/94_二叉树的中序遍历.py][94.二叉树的中序遍历]]
     * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
