--- a/README.org
+++ b/README.org
@@ -27,39 +27,43 @@
 #+DOWNLOADED: file:/var/folders/73/53s3wczx1l32608prn_fdgrm0000gn/T/TemporaryItems/（screencaptureui正在存储文稿，已完成6）/截屏2020-05-14 下午8.50.18.png @ 2020-05-14 20:50:24
 [[file:Screen-Pictures/LeetCode%E5%88%B7%E9%A2%98%E7%AF%87/2020-05-14_20-50-24_%E6%88%AA%E5%B1%8F2020-05-14%20%E4%B8%8B%E5%8D%888.50.18.png]]
 ** 🐈每日题目分配
-   | Date               | Topic    | [[https://github.com/AI-confused][Black_tear]]                       | [[https://github.com/yechens/][Giant]]                           | [[https://github.com/weizaiff][Van]]                                        | Check |
-   |--------------------+----------+----------------------------------+---------------------------------+--------------------------------------------+-------|
-   | 05/14              | DP       | [[https://leetcode-cn.com/problems/house-robber/][198.打家劫舍]]                     | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/][121.买卖股票的最佳时机]]          | [[https://leetcode-cn.com/problems/maximum-subarray/][53.最大子序和]]                              | ☑️     |
-   | 05/15              | DP       | [[https://leetcode-cn.com/problems/house-robber-iii/][237.打家劫舍 III]]                 | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/][309.最佳买卖股票时机含冷冻期]]    | [[https://leetcode-cn.com/problems/longest-increasing-subsequence/][300.最长上升子序列]]                         | ☑️     |
-   | 05/16              | DP       | [[https://leetcode-cn.com/problems/minimum-path-sum/][64.最小路径和]]                    | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-iii/][123.买卖股票的最佳时机 III]]      | [[https://leetcode-cn.com/problems/longest-palindromic-substring/][5.最长回文子串]]                             | ☑️     |
-   | 05/17              | DP       | [[https://leetcode-cn.com/problems/coin-change/][322.零钱兑换]]                     | [[https://leetcode-cn.com/problems/word-break/][139.单词拆分]]                    | [[https://leetcode-cn.com/problems/partition-equal-subset-sum/][416.分割等和子集]]                           | ☑️     |
-   |--------------------+----------+----------------------------------+---------------------------------+--------------------------------------------+-------|
-   | 05/18              | 二叉树   | [[https://leetcode-cn.com/problems/merge-two-binary-trees][617.合并二叉树]]                   | [[https://leetcode-cn.com/problems/maximum-depth-of-binary-tree][104.二叉树的最大深度]]            | [[https://leetcode-cn.com/problems/symmetric-tree][101.对称二叉树]]                             | ☑️     |
-   | 05/19              | 遍历     | [[https://leetcode-cn.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal][105.从前序和中序构造二叉树]]       | [[https://leetcode-cn.com/problems/binary-tree-inorder-traversal/][94.非递归中序遍历]]               | [[https://leetcode-cn.com/problems/binary-tree-level-order-traversal/][102.非递归层序遍历]]                         | ☑️     |
-   | 05/20              | 二叉树   | [[https://leetcode-cn.com/problems/lowest-common-ancestor-of-a-binary-tree][236.二叉树的最近公共祖先]]         | [[https://leetcode-cn.com/problems/validate-binary-search-tree][98.验证二叉搜索树]]               | [[https://leetcode-cn.com/problems/unique-binary-search-trees][96.不同的二叉搜索树]]                        | ☑️     |
-   | 05/21              | 二叉树   | [[https://leetcode-cn.com/problems/diameter-of-binary-tree][543.二叉树的直径]]                 | [[https://leetcode-cn.com/problems/convert-bst-to-greater-tree][538.把二叉树转换为累加树]]        | [[https://leetcode-cn.com/problems/flatten-binary-tree-to-linked-list][114.二叉树展开为链表]]                       | ☑️     |
-   | 05/22              | 分治     | [[https://leetcode-cn.com/problems/burst-balloons][312.戳气球]]                       | [[https://leetcode-cn.com/problems/binary-tree-maximum-path-sum][124.二叉树中的最大路径和]]        | [[https://leetcode-cn.com/problems/serialize-and-deserialize-binary-tree][297.二叉树的序列化与反序列化]]               |       |
-   | 05/23              | DP       | [[https://leetcode-cn.com/problems/maximal-rectangle/][85.最大矩形]]                      | [[https://leetcode-cn.com/problems/regular-expression-matching/][10.正则表达式匹配]]               | [[https://leetcode-cn.com/problems/longest-valid-parentheses/][32.最长有效括号]]                            |       |
-   | 05/24              | 链表     | [[https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list][19.删除链表倒数第N个节点]]         | [[https://leetcode-cn.com/problems/linked-list-cycle-ii][142.环形链表]]                    | [[https://leetcode-cn.com/problems/merge-k-sorted-lists][23.合并k个排序链表]]                         | ☑️     |
-   | 05/25              | DP       | [[https://leetcode-cn.com/problems/counting-bits/][338.比特位计数]]                   | [[https://leetcode-cn.com/problems/perfect-squares/][279.完全平方数]]                  | [[https://leetcode-cn.com/problems/unique-paths/][62.不同路径]]                                |       |
-   | 05/26              | DP       | [[https://leetcode-cn.com/problems/target-sum/][494.目标和]]                       | [[https://leetcode-cn.com/problems/maximal-square/][221.最大正方形]]                  | [[https://leetcode-cn.com/problems/maximum-product-subarray/][152.乘积最大子数组]]                         |       |
-   | 05/27              | DP       | [[https://leetcode-cn.com/problems/trapping-rain-water/][42.接雨水]]                        | [[https://leetcode-cn.com/problems/edit-distance/][72.编辑距离]]                     | [[https://leetcode-cn.com/problems/wildcard-matching][44.通配符匹配]]                              |       |
-   | 05/28              | 堆       | [[https://leetcode-cn.com/problems/kth-largest-element-in-an-array][215.数组中的第K个最大元素]]        | [[https://leetcode-cn.com/problems/sliding-window-maximum/][239.滑动窗口最大值]]              | [[https://leetcode-cn.com/problems/remove-invalid-parentheses/][301.删除无效的括号]]                         | ☑️     |
-   | 05/29              | 数组     | [[https://leetcode-cn.com/problems/3sum][15.三数之和]]                      | [[https://leetcode-cn.com/problems/next-permutation][31.下一个排列]]                   | [[https://leetcode-cn.com/problems/find-first-and-last-position-of-element-in-sorted-array][34.在排序数组中查找元素的第一个和最后一...]] | ☑️     |
-   | 05/30              | 链表     | [[https://leetcode-cn.com/problems/add-two-numbers][2.两数相加]]                       | [[https://leetcode-cn.com/problems/sort-list][148.排序链表]]                    | [[https://leetcode-cn.com/problems/largest-rectangle-in-histogram/][84.柱状图中最大的矩形]]                      | ☑️     |
-   | 05/31              | 分治     | [[https://leetcode-cn.com/problems/majority-element][169.多数元素]]                     | [[https://leetcode-cn.com/problems/search-a-2d-matrix-ii][240.搜索二维矩阵 II]]             | [[https://leetcode-cn.com/problems/rotate-list/][61.旋转链表]]                                | ☑️     |
-   | 新的一月新的开始！ |          | 💪                               | 💪                              | 💪                                         |       |
-   | 06/01              | 分治     | [[https://leetcode-cn.com/problems/k-closest-points-to-origin/][973.最接近原点的 K 个点]]          | [[https://leetcode-cn.com/problems/median-of-two-sorted-arrays/][4.寻找两个正序数组的中位数]]      | [[https://leetcode-cn.com/problems/er-cha-sou-suo-shu-yu-shuang-xiang-lian-biao-lcof/][面试题36.二叉搜索树与双向链表]]              | ☑️     |
-   | 06/02              | 双指针   | [[https://leetcode-cn.com/problems/container-with-most-water/][11.盛最多水的容器]]                | [[https://leetcode-cn.com/problems/3sum-closest][16.最接近的三数之和]]             | [[https://leetcode-cn.com/problems/sort-colors/][75.颜色分类]]                                | ☑️     |
-   | 06/03              | 双指针   | [[https://leetcode-cn.com/problems/reverse-string][344.反转字符串]]                   | [[https://leetcode-cn.com/problems/reverse-vowels-of-a-string][345.反转字符串中的元音字母]]      | [[https://leetcode-cn.com/problems/intersection-of-two-arrays][349.两个数组的交集]]                         |       |
-   | 06/04              | DFS      | [[https://leetcode-cn.com/problems/course-schedule][207.课程表]]                       | [[https://leetcode-cn.com/problems/number-of-islands][200.岛屿数量]]                    | [[https://leetcode-cn.com/problems/decode-string][394.字符串解码]]                             |       |
-   | 06/05              | DFS      | [[https://leetcode-cn.com/problems/out-of-boundary-paths][576.出界的路径数]]                 | [[https://leetcode-cn.com/problems/max-area-of-island][695.岛屿的最大面积]]              | [[https://leetcode-cn.com/problems/shopping-offers][638.大礼包]]                                 |       |
-   | 06/06              | DFS      | [[https://leetcode-cn.com/problems/surrounded-regions/][130.被围绕的区域]]                 | [[https://leetcode-cn.com/problems/binary-tree-right-side-view/][199.二叉树的右视图]]              | [[https://leetcode-cn.com/problems/pacific-atlantic-water-flow/][417.太平洋大西洋水流问题]]                   |       |
-   | 06/07              | 链表     | [[https://leetcode-cn.com/problems/intersection-of-two-linked-lists][160.相交链表]]                     | [[https://leetcode-cn.com/problems/reverse-linked-list][206.反转链表]]                    | [[https://leetcode-cn.com/problems/palindrome-linked-list][234.回文链表]]                               |       |
-   | 第二周也要努力🦆   |          |                                  |                                 |                                            |       |
-   | 06/08              | DP       | [[https://leetcode-cn.com/problems/valid-permutations-for-di-sequence][DI序列的有效排列]] / [[https://leetcode-cn.com/problems/stone-game][石子游戏]]      | [[https://leetcode-cn.com/problems/triples-with-bitwise-and-equal-to-zero/][按位与为零的三元组]] / [[https://leetcode-cn.com/problems/stone-game-ii][石子游戏II]] | [[https://leetcode-cn.com/problems/stone-game-iii][石子游戏III]] / [[https://leetcode-cn.com/problems/soup-servings][分🥣]]                         |       |
-   | 06/09              | 分治     | [[https://leetcode-cn.com/problems/triangle][三角形最小路径和]] / [[https://leetcode-cn.com/problems/robot-in-a-grid-lcci][迷路的机器人]]  | [[https://leetcode-cn.com/problems/one-away-lcci][一次编辑]] / [[https://leetcode-cn.com/problems/number-of-2s-in-range-lcci][2出现的次数]]          | [[https://leetcode-cn.com/problems/max-black-square-lcci][最大方阵]]/ [[https://leetcode-cn.com/problems/longest-zigzag-path-in-a-binary-tree][二叉树中的最长交错路径]]           |       |
-   | 06/10              | 二分查找 | [[https://leetcode-cn.com/problems/powx-n][Pow(x, n)]] /[[https://leetcode-cn.com/problems/kth-smallest-element-in-a-sorted-matrix][有序矩阵中第K小的元素]] | [[https://leetcode-cn.com/problems/find-the-duplicate-number][找出重复数]]/[[https://leetcode-cn.com/problems/find-peak-element][寻找峰值]]             | [[https://leetcode-cn.com/problems/divide-two-integers][两数相➗]]/[[https://leetcode-cn.com/problems/kth-smallest-element-in-a-bst][二叉搜索树中第K小的元素]]           |       |
+   | Date               | Topic    | [[https://github.com/AI-confused][Black_tear]]                             | [[https://github.com/yechens/][Giant]]                             | [[https://github.com/weizaiff][Van]]                                        | Check |
+   |--------------------+----------+----------------------------------------+-----------------------------------+--------------------------------------------+-------|
+   | 05/14              | DP       | [[https://leetcode-cn.com/problems/house-robber/][198.打家劫舍]]                           | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/][121.买卖股票的最佳时机]]            | [[https://leetcode-cn.com/problems/maximum-subarray/][53.最大子序和]]                              | ☑️     |
+   | 05/15              | DP       | [[https://leetcode-cn.com/problems/house-robber-iii/][237.打家劫舍 III]]                       | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/][309.最佳买卖股票时机含冷冻期]]      | [[https://leetcode-cn.com/problems/longest-increasing-subsequence/][300.最长上升子序列]]                         | ☑️     |
+   | 05/16              | DP       | [[https://leetcode-cn.com/problems/minimum-path-sum/][64.最小路径和]]                          | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-iii/][123.买卖股票的最佳时机 III]]        | [[https://leetcode-cn.com/problems/longest-palindromic-substring/][5.最长回文子串]]                             | ☑️     |
+   | 05/17              | DP       | [[https://leetcode-cn.com/problems/coin-change/][322.零钱兑换]]                           | [[https://leetcode-cn.com/problems/word-break/][139.单词拆分]]                      | [[https://leetcode-cn.com/problems/partition-equal-subset-sum/][416.分割等和子集]]                           | ☑️     |
+   |--------------------+----------+----------------------------------------+-----------------------------------+--------------------------------------------+-------|
+   | 05/18              | 二叉树   | [[https://leetcode-cn.com/problems/merge-two-binary-trees][617.合并二叉树]]                         | [[https://leetcode-cn.com/problems/maximum-depth-of-binary-tree][104.二叉树的最大深度]]              | [[https://leetcode-cn.com/problems/symmetric-tree][101.对称二叉树]]                             | ☑️     |
+   | 05/19              | 遍历     | [[https://leetcode-cn.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal][105.从前序和中序构造二叉树]]             | [[https://leetcode-cn.com/problems/binary-tree-inorder-traversal/][94.非递归中序遍历]]                 | [[https://leetcode-cn.com/problems/binary-tree-level-order-traversal/][102.非递归层序遍历]]                         | ☑️     |
+   | 05/20              | 二叉树   | [[https://leetcode-cn.com/problems/lowest-common-ancestor-of-a-binary-tree][236.二叉树的最近公共祖先]]               | [[https://leetcode-cn.com/problems/validate-binary-search-tree][98.验证二叉搜索树]]                 | [[https://leetcode-cn.com/problems/unique-binary-search-trees][96.不同的二叉搜索树]]                        | ☑️     |
+   | 05/21              | 二叉树   | [[https://leetcode-cn.com/problems/diameter-of-binary-tree][543.二叉树的直径]]                       | [[https://leetcode-cn.com/problems/convert-bst-to-greater-tree][538.把二叉树转换为累加树]]          | [[https://leetcode-cn.com/problems/flatten-binary-tree-to-linked-list][114.二叉树展开为链表]]                       | ☑️     |
+   | 05/22              | 分治     | [[https://leetcode-cn.com/problems/burst-balloons][312.戳气球]]                             | [[https://leetcode-cn.com/problems/binary-tree-maximum-path-sum][124.二叉树中的最大路径和]]          | [[https://leetcode-cn.com/problems/serialize-and-deserialize-binary-tree][297.二叉树的序列化与反序列化]]               |       |
+   | 05/23              | DP       | [[https://leetcode-cn.com/problems/maximal-rectangle/][85.最大矩形]]                            | [[https://leetcode-cn.com/problems/regular-expression-matching/][10.正则表达式匹配]]                 | [[https://leetcode-cn.com/problems/longest-valid-parentheses/][32.最长有效括号]]                            |       |
+   | 05/24              | 链表     | [[https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list][19.删除链表倒数第N个节点]]               | [[https://leetcode-cn.com/problems/linked-list-cycle-ii][142.环形链表]]                      | [[https://leetcode-cn.com/problems/merge-k-sorted-lists][23.合并k个排序链表]]                         | ☑️     |
+   | 05/25              | DP       | [[https://leetcode-cn.com/problems/counting-bits/][338.比特位计数]]                         | [[https://leetcode-cn.com/problems/perfect-squares/][279.完全平方数]]                    | [[https://leetcode-cn.com/problems/unique-paths/][62.不同路径]]                                |       |
+   | 05/26              | DP       | [[https://leetcode-cn.com/problems/target-sum/][494.目标和]]                             | [[https://leetcode-cn.com/problems/maximal-square/][221.最大正方形]]                    | [[https://leetcode-cn.com/problems/maximum-product-subarray/][152.乘积最大子数组]]                         |       |
+   | 05/27              | DP       | [[https://leetcode-cn.com/problems/trapping-rain-water/][42.接雨水]]                              | [[https://leetcode-cn.com/problems/edit-distance/][72.编辑距离]]                       | [[https://leetcode-cn.com/problems/wildcard-matching][44.通配符匹配]]                              |       |
+   | 05/28              | 堆       | [[https://leetcode-cn.com/problems/kth-largest-element-in-an-array][215.数组中的第K个最大元素]]              | [[https://leetcode-cn.com/problems/sliding-window-maximum/][239.滑动窗口最大值]]                | [[https://leetcode-cn.com/problems/remove-invalid-parentheses/][301.删除无效的括号]]                         | ☑️     |
+   | 05/29              | 数组     | [[https://leetcode-cn.com/problems/3sum][15.三数之和]]                            | [[https://leetcode-cn.com/problems/next-permutation][31.下一个排列]]                     | [[https://leetcode-cn.com/problems/find-first-and-last-position-of-element-in-sorted-array][34.在排序数组中查找元素的第一个和最后一...]] | ☑️     |
+   | 05/30              | 链表     | [[https://leetcode-cn.com/problems/add-two-numbers][2.两数相加]]                             | [[https://leetcode-cn.com/problems/sort-list][148.排序链表]]                      | [[https://leetcode-cn.com/problems/largest-rectangle-in-histogram/][84.柱状图中最大的矩形]]                      | ☑️     |
+   | 05/31              | 分治     | [[https://leetcode-cn.com/problems/majority-element][169.多数元素]]                           | [[https://leetcode-cn.com/problems/search-a-2d-matrix-ii][240.搜索二维矩阵 II]]               | [[https://leetcode-cn.com/problems/rotate-list/][61.旋转链表]]                                | ☑️     |
+   | 新的一月新的开始！ |          | 💪                                     | 💪                                | 💪                                         |       |
+   | 06/01              | 分治     | [[https://leetcode-cn.com/problems/k-closest-points-to-origin/][973.最接近原点的 K 个点]]                | [[https://leetcode-cn.com/problems/median-of-two-sorted-arrays/][4.寻找两个正序数组的中位数]]        | [[https://leetcode-cn.com/problems/er-cha-sou-suo-shu-yu-shuang-xiang-lian-biao-lcof/][面试题36.二叉搜索树与双向链表]]              | ☑️     |
+   | 06/02              | 双指针   | [[https://leetcode-cn.com/problems/container-with-most-water/][11.盛最多水的容器]]                      | [[https://leetcode-cn.com/problems/3sum-closest][16.最接近的三数之和]]               | [[https://leetcode-cn.com/problems/sort-colors/][75.颜色分类]]                                | ☑️     |
+   | 06/03              | 双指针   | [[https://leetcode-cn.com/problems/reverse-string][344.反转字符串]]                         | [[https://leetcode-cn.com/problems/reverse-vowels-of-a-string][345.反转字符串中的元音字母]]        | [[https://leetcode-cn.com/problems/intersection-of-two-arrays][349.两个数组的交集]]                         |       |
+   | 06/04              | DFS      | [[https://leetcode-cn.com/problems/course-schedule][207.课程表]]                             | [[https://leetcode-cn.com/problems/number-of-islands][200.岛屿数量]]                      | [[https://leetcode-cn.com/problems/decode-string][394.字符串解码]]                             |       |
+   | 06/05              | DFS      | [[https://leetcode-cn.com/problems/out-of-boundary-paths][576.出界的路径数]]                       | [[https://leetcode-cn.com/problems/max-area-of-island][695.岛屿的最大面积]]                | [[https://leetcode-cn.com/problems/shopping-offers][638.大礼包]]                                 |       |
+   | 06/06              | DFS      | [[https://leetcode-cn.com/problems/surrounded-regions/][130.被围绕的区域]]                       | [[https://leetcode-cn.com/problems/binary-tree-right-side-view/][199.二叉树的右视图]]                | [[https://leetcode-cn.com/problems/pacific-atlantic-water-flow/][417.太平洋大西洋水流问题]]                   |       |
+   | 06/07              | 链表     | [[https://leetcode-cn.com/problems/intersection-of-two-linked-lists][160.相交链表]]                           | [[https://leetcode-cn.com/problems/reverse-linked-list][206.反转链表]]                      | [[https://leetcode-cn.com/problems/palindrome-linked-list][234.回文链表]]                               |       |
+   | 第二周也要努力🦆   |          |                                        |                                   |                                            |       |
+   | 06/08              | DP       | [[https://leetcode-cn.com/problems/valid-permutations-for-di-sequence][DI序列的有效排列]] / [[https://leetcode-cn.com/problems/stone-game][石子游戏]]            | [[https://leetcode-cn.com/problems/triples-with-bitwise-and-equal-to-zero/][按位与为零的三元组]] / [[https://leetcode-cn.com/problems/stone-game-ii][石子游戏II]]   | [[https://leetcode-cn.com/problems/stone-game-iii][石子游戏III]] / [[https://leetcode-cn.com/problems/soup-servings][分🥣]]                         |       |
+   | 06/09              | 分治     | [[https://leetcode-cn.com/problems/the-skyline-problem/][天际线]] / [[https://leetcode-cn.com/problems/sorted-matrix-search-lcci][排序矩阵查找]]                  | [[https://leetcode-cn.com/problems/reverse-pairs][翻转对]] / [[https://leetcode-cn.com/problems/find-majority-element-lcci][主要元素]]                 | [[https://leetcode-cn.com/problems/freedom-trail][自由之路]] / [[https://leetcode-cn.com/problems/contiguous-sequence-lcci][连续数列]]                        |       |
+   | 06/10              | 二分查找 | [[https://leetcode-cn.com/problems/three-equal-parts][三等分]]/[[https://leetcode-cn.com/problems/valid-perfect-square][有效的完全平方数]]                | [[https://leetcode-cn.com/problems/swim-in-rising-water][水位上升的游泳池中游泳]]/[[https://leetcode-cn.com/problems/two-sum-ii-input-array-is-sorted][两数之和II]] | [[https://leetcode-cn.com/problems/super-egg-drop][🥚掉落]] / [[https://leetcode-cn.com/problems/the-k-weakest-rows-in-a-matrix][方阵中战斗力最弱的 K 行]]           |       |
+   | 06/11              | 回溯     | [[https://leetcode-cn.com/problems/word-break-ii][单词拆分II]]/[[https://leetcode-cn.com/problems/subsets][子集]]                        | [[https://leetcode-cn.com/problems/word-ladder-ii][单词接龙II]] / [[https://leetcode-cn.com/problems/subsets-ii][子集II]]               | [[https://leetcode-cn.com/problems/word-search-ii][单词搜索II]] / [[https://leetcode-cn.com/problems/power-set-lcci][幂集]]                          |       |
+   | 06/12              | BFS      | [[https://leetcode-cn.com/problems/trapping-rain-water-ii/][接雨水II]]/[[https://leetcode-cn.com/problems/maximum-depth-of-n-ary-tree][N叉🌲的最大深度]]               | [[https://leetcode-cn.com/problems/sliding-puzzle][滑动谜题]] /  [[https://leetcode-cn.com/problems/employee-importance][员工的重要性]]          | [[https://leetcode-cn.com/problems/shortest-path-to-get-all-keys][获得所有钥匙串的最短路径]] / [[https://leetcode-cn.com/problems/cousins-in-binary-tree][二叉树的堂兄弟]]  |       |
+   | 06/13              | 🌲       | [[https://leetcode-cn.com/problems/xu-lie-hua-er-cha-shu-lcof][序列化二叉树]]/[[https://leetcode-cn.com/problems/er-cha-sou-suo-shu-de-zui-jin-gong-gong-zu-xian-lcof][二叉搜索🌲的最近公共祖先]]  | [[https://leetcode-cn.com/problems/sum-of-distances-in-tree][🌲中距离之和]]/[[https://leetcode-cn.com/problems/sum-root-to-leaf-numbers][根到叶子节点数字之和]] | [[https://leetcode-cn.com/problems/recover-binary-search-tree][恢复二叉搜索🌲]]/[[https://leetcode-cn.com/problems/univalued-binary-tree][单值二叉树]]                  |       |
+   | 06/14              | 排序     | [[https://leetcode-cn.com/problems/ba-shu-zu-pai-cheng-zui-xiao-de-shu-lcof][把数组排成最小的数]]/[[https://leetcode-cn.com/problems/the-k-strongest-values-in-an-array][数组中的 k 个最强值]] | [[https://leetcode-cn.com/problems/sum-swap-lcci][交换和]]/[[https://leetcode-cn.com/problems/sub-sort-lcci][部分排序]]                   | [[https://leetcode-cn.com/problems/sort-the-matrix-diagonally][将矩阵按对角线排序]]/[[https://leetcode-cn.com/problems/sort-integers-by-the-power-value][将整数按权重排序]]        |       |
 ** 🧠解题思路
 *** 题目列表
 **** 动态规划
@@ -82,13 +86,7 @@
      * [[file:./coding/322_零钱兑换.py][322.零钱兑换]]
      * [[file:./coding/337_打家劫舍III.py][🍊337.打家劫舍III]]
      * [[file:./coding/416_分割等和子集.py][416.分割等和子集]]🤓
-     * [[file:./coding/494_目标和.org][494.目标和😭]]
-     * [[file:./coding/903_DI序列的有效排列.org][903.DI序列的有效排列🥱]]
-     * [[file:./coding/808_分汤.py][808.分汤]]😭
-     * [[file:./coding/877_石子游戏.org][877.石子游戏]]
-     * [[file:./coding/1406_石子游戏3.py][1406.石子游戏3]]😭
-     * [[file:./coding/120_三角形最小路径和.org][120. 三角形最小路径和😊]]
-     * [[file:./coding/迷路的机器人.org][迷路的机器人]]
+     * [[file:./coding/494_目标和.py][494.目标和😭]]
 **** 二叉树
     * [[file:./coding/94_二叉树的中序遍历.py][94.二叉树的中序遍历]]
     * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
@@ -153,7 +151,6 @@
     * [[file:/coding/239_滑动窗口最大值.py][239.滑动窗口最大值]]😭
 **** 二分查找
     * [[file:/coding/4_寻找两个正序数组的中位数.py][4.寻找两个正序数组的中位数]]
-    * [[file:./coding/面试题_排序矩阵查找.org][面试题10.09.排序矩阵查找]]😂
 **** 递归
     * [[file:./coding/638_大礼包.py][638.大礼包]]
     * [[file:/coding/1140_石子游戏II.org][1140.石子游戏 II]]😭
@@ -169,10 +166,11 @@
    | xgboost                   | -             |
    |                           |               |
 ** 分享链接（专题笔记文件地址）
-   | topic    | black_tear | giant | van                        |
-   | SVM      | -          | -     | [[file:./MachineLearning/SVM/机器学习-svm全手写推导_compressed.pdf][机器学习-svm全手写推导.pdf]] |
-   | Word2Vec | [[file:./MachineLearning/Word2vec/word2vec.org][word2vec]]   |       |                            |
-   | HMM&CRF  |            |       | [[file:./MachineLearning/HMM&CRF/HMM&CRF_compressed.pdf][HMM&CRF]]                    |
+   | topic                     | black_tear | giant        | van                        |
+   | SVM                       | -          | -            | [[file:./MachineLearning/SVM/机器学习-svm全手写推导_compressed.pdf][机器学习-svm全手写推导.pdf]] |
+   | Word2Vec                  | [[file:./MachineLearning/Word2vec/word2vec.org][word2vec]]   |              |                            |
+   | HMM&CRF                   |            |              | [[file:./MachineLearning/HMM&CRF/HMM&CRF_compressed.pdf][HMM&CRF]]                    |
+   | DecisionTree+RandomForest | -          | [[file:/MachineLearning/DecisionTree&RandomForest/tree.org][decisiontree]] | -                          |
 *   TO_DO list
    | 数学基础       | 6月 待安排 |
    | 笔试题         | 6月 待安排 |
