--- a/README.org
+++ b/README.org
@@ -107,6 +107,7 @@
     * [[file:./coding/169_多数元素.py][169.多数元素😄]]
     * [[file:/coding/240_搜索二维矩阵II.py][240.搜索二维矩阵 II😄]]
     * [[file:./coding/973_最接近原点的k个点.py][973.最接近原点的k个点]]
+    * [[file:/coding/面试题_主要元素.org][面试题_主要元素-摩尔投票法]]
 **** 双指针
      + [[file:./coding/11_成最多水的容器.py][11.盛最多水的容器]]
      + [[file:./coding/15_三数之和.py][15.三数之和😂]]
@@ -131,19 +132,19 @@
     * [[file:/coding/142_环形链表II.py][142.环形链表II]]😊
     * [[file:/coding/148_排序链表.py][148.排序链表]]
     * [[file:/coding/206_反转链表.org][206.反转链表]]
-**** 位运算
-    * [[file:./coding/338_比特位计数.py][338.比特位计数]]
 **** BFS
     * [[file:/coding/199_二叉树的右视图.org][199.二叉树的右视图]]😁
     * [[file:./coding/301_删除无效的括号.py][301.删除无效的括号]]
-**** 拓扑排序
-    * [[file:./coding/207_课程表.py][207.课程表]]
 **** DFS
     * [[file:/coding/200_岛屿数量.py][200.岛屿数量]]😊
     * [[file:./coding/417_太平洋大西洋水流问题.py][417.太平洋大西洋水流问题]]👖
     * [[file:/coding/695_岛屿的最大面积.py][695.岛屿的最大面积😁]]
     * [[file:./coding/576_出界的路径数.org][576.出界的路径数]]
     * [[file:./coding/130_被围绕的区域.org][130.被围绕的区域😭]]
+**** 拓扑排序
+    * [[file:./coding/207_课程表.py][207.课程表]]
+**** 位运算
+    * [[file:./coding/338_比特位计数.py][338.比特位计数]]
 **** 堆
     + [[file:./coding/215_数组中的第K个最大元素.py][215.数组中的第K个最大元素]]😊
 **** 双向队列
@@ -155,6 +156,8 @@
     * [[file:/coding/1140_石子游戏II.org][1140.石子游戏 II]]😭
 **** 哈希表
     * [[file:/coding/982_按位与为零的三元组.org][982.按位与为零的三元组]]
+**** 分治
+    * [[file:/coding/493_翻转对.org][493.翻转对]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题                      | deadline      |
