--- a/README.org
+++ b/README.org
@@ -155,6 +155,8 @@
     * [[file:/coding/239_滑动窗口最大值.py][239.滑动窗口最大值]]😭
 **** 二分查找
     * [[file:/coding/4_寻找两个正序数组的中位数.py][4.寻找两个正序数组的中位数]]
+    * [[file:/coding/162_寻找峰值.org][162.寻找峰值🐶]]
+    * [[file:/coding/287_寻找重复数.org][287.寻找重复数]]😁
     * [[file:./coding/378_有序矩阵中第K小的元素.org][378.有序矩阵中第K小的元素]]😭
 **** 递归
     * [[file:./coding/638_大礼包.py][638.大礼包]]
