--- a/README.org
+++ b/README.org
@@ -108,8 +108,10 @@
     * [[file:/coding/31_下一个排列.py][31.下一个排列]]
     * [[file:./coding/169_多数元素.py][169.多数元素😄]]
     * [[file:/coding/240_搜索二维矩阵II.py][240.搜索二维矩阵 II😄]]
+    * [[file:/coding/932_漂亮数组.org][932.漂亮数组]]
     * [[file:./coding/973_最接近原点的k个点.py][973.最接近原点的k个点]]
     * [[file:/coding/面试题_主要元素.org][面试题_主要元素-摩尔投票法]]
+    * [[file:/coding/2出现的次数.org][面试题_2出现的次数]]🤒️
 **** 双指针
      + [[file:./coding/11_成最多水的容器.py][11.盛最多水的容器]]
      + [[file:./coding/15_三数之和.py][15.三数之和😂]]
@@ -119,6 +121,7 @@
      + [[file:/coding/345_反转字符串中的元音字母.py][345.反转字符串中的元音字母]]
      + [[file:./coding/160_相交链表.org][160.相交链表]]
      + [[file:./coding/分割链表.org][分割链表]]
+     + [[file:/coding/一次编辑.org][面试题_一次编辑]]
 **** 三指针
     * [[file:./coding/74_颜色分类.py][74.颜色分类]]😭
 **** 栈   
@@ -135,6 +138,7 @@
     * [[file:/coding/142_环形链表II.py][142.环形链表II]]😊
     * [[file:/coding/148_排序链表.py][148.排序链表]]
     * [[file:/coding/206_反转链表.org][206.反转链表]]
+    * [[file:/coding/142_环形链表II.py][面试题_环路检测]]
 **** BFS
     * [[file:/coding/199_二叉树的右视图.org][199.二叉树的右视图]]😁
     * [[file:./coding/301_删除无效的括号.py][301.删除无效的括号]]
