--- a/README.org
+++ b/README.org
@@ -144,6 +144,7 @@
 **** BFS
     * [[file:/coding/199_二叉树的右视图.org][199.二叉树的右视图]]😁
     * [[file:./coding/301_删除无效的括号.py][301.删除无效的括号]]
+    * [[file:./coding/节点间通路.org][节点通路]]
 **** DFS
     * [[file:/coding/200_岛屿数量.py][200.岛屿数量]]😊
     * [[file:./coding/417_太平洋大西洋水流问题.py][417.太平洋大西洋水流问题]]👖
@@ -173,6 +174,7 @@
     * [[file:/coding/493_翻转对.org][493.翻转对]]
 **** 并查集
     * [[file:/coding/684_冗余连接.org][684.冗余连接]]🍭
+    * [[file:./coding/990_等式方程的可满足性.org][990.等式方程的可满足性]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题                      | deadline      |
